@@ -1,5 +1,10 @@
 2006-12-28  OHASHI Akira  <bg66@koka-in.org>
 
+	* sb-mixi.el (shimbun-mixi-message-id-suffix): Abolish.
+	(shimbun-mixi-make-message-id): Revert.
+
+2006-12-28  OHASHI Akira  <bg66@koka-in.org>
+
 	* sb-mixi.el (shimbun-mixi-send-mail-wrapper): New function.
 
 2006-12-28  OHASHI Akira  <bg66@koka-in.org>
